feat: support expression variables scoped to rowgroups
- Update `VariableBuilder` and `ProgramBuilder` to correctly handle variables within hoisting groups, marking them as prototypes when appropriate.
- Move alias resolution logic from `QuestionBuilder` to `AbstractItemBuilder` to support relative references in variable expressions within rowgroups.
- Update `CreateDialobSessionProgramVisitor` to register prototype variables.
- Refactor `VariableUpdateCommand` to extend `AbstractUpdateAttributeCommand`.
- Add `shouldCalculateExpressionVariablesInRowgroupsContext` test to `DialobProgramFromFormCompilerTest` to verify variable behavior in rowgroups.
- Add `assertVariableEquals` helper to `AbstractDialobProgramTest`.
- Refactor `ActionToCommandMapper.toCommands` usage to static import in `DialobProgramFromFormCompilerTest`.

# Conflicts:
#	dialob-components/dialob-session-engine/src/main/java/io/dialob/session/engine/program/ProgramBuilder.java
#	dialob-components/dialob-session-engine/src/main/java/io/dialob/session/engine/program/VariableBuilder.java
#	dialob-components/dialob-session-engine/src/test/java/io/dialob/session/engine/AbstractDialobProgramTest.java